# webhaskell

./: .gitignore  README.md  haskell-webapi.cabal
app/: Main.hs
src/: WebNote.hs
