cabal-version:      2.4
name:               haskell-webapi
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Web app to store Note and translate it using API

-- A longer description of the package.
description: CRUD Function for Notes, Translator using Libre (Free API)

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kulombok
maintainer:         wh.tulloh@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-webapi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
        WebNote

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
          base ^>=4.15.1.0
        , Spock
        , http-types
        , persistent
        , persistent-sqlite
        , text
        , monad-logger
        , mtl
        , blaze-html
        , digestive-functors
        , digestive-functors-blaze
        , Spock-digestive
        , shakespeare

    hs-source-dirs:   
        app
        src

    default-language: Haskell2010
